--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :category_id %>
+    <%= f.association :category %>
     <%= f.input :color %>
     <%= f.input :condition %>
     <%= f.input :price %>
