Associated vehicles and features

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
 <body>
 <%= link_to "Makes", makes_path %>
 <%= link_to "Categories", categories_path %>
+<%= link_to "Vehicles", vehicles_path %>
+<%= link_to "Features", features_path %>
 <%= yield %>
 
 </body>
